# calx

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: testing.md
src/: cli.rs  dateparse.rs  error.rs  main.rs  output.rs  state.rs  store.rs
src/commands/: add.rs  agenda.rs  calendars.rs  completions.rs  conflicts.rs  delete.rs  doctor.rs  duplicate.rs  events.rs  export.rs  free.rs  import_cmd.rs  interactive.rs  mod.rs  next.rs  search.rs  select.rs  show.rs  template.rs  today.rs  undo.rs  upcoming.rs  update.rs  watch.rs
tests/: integration.rs  live_eventkit.rs
